ui.frontend/src/main/webpack/etisalat/styles/product-grid-text-section.scss
.container-product-grid {
    margin-right: auto;
    margin-left: auto;
    padding-left: 12px;
    padding-right: 12px;
	// @media (max-width: 767px)
	//  {
	// 		width: 756px;
	// 	}
	@media (min-width: 1248px)
		{
			width: 1224px;

		}
}

.product-grid-text-section {
	padding: 1.5rem 0;
	
	.swiper-slide &	{
		min-height: 580px!important;	
	}

	.btn-green
	  {
		background-color:$white !important;			
		}

	.btn-text {
			cursor: pointer;
			@include font-family-lato;
			margin-bottom: 1.5rem;
		}

	.paragraph-styling-width55 {
		width: 55%!important;
	   }
	   
	.wst-main-headings {
		width: 100%;
		h4 {
			margin-bottom: 1rem;
		}
	}
	   .table-swiper-button-next,
        .table-swiper-button-prev {
          position: relative;
          left: auto;
		  width: 34px !important;
		  left: 1px !important;
        }
        .table-swiper-button-prev {
          right: 1.5rem;
        }
		.swiper-button-prev,
		.swiper-button-next {
			position: relative;
			top: 50%;
			width: 27px;
			height: 44px;
			margin-top: -22px;
			z-index: 10;
			cursor: pointer;
			-moz-background-size: 27px 19px;
			-webkit-background-size: 27px 19px;
			background-size: 27px 19px;
			background-position: center;
			background-repeat: no-repeat;
		}

		 .products .row-tiles-table .col-xs-12 {
			margin-bottom: 22px!important
		}
		@media (max-width:991px) {
			 .products .row-tiles-table .col-xs-12 {
				margin-bottom: 22px!important
			}
		}
		
		.devices .row-tiles-table .col-xs-12 {
			margin-bottom: 40px!important
		}
		
		@media (max-width:991px) {
			.devices .row-tiles-table .col-xs-12 {
				margin-bottom: 22px!important
			}
		}
		
		.devices .row-tiles-table .col-xs-12 .tile-card {
			margin-bottom: 0!important
		}
		@media (max-width: $screen-sm-max)
		{
             .row-tiles-table .col-xs-12 {
				width: 100% !important;
			 }
		}
		@media (min-width: 768px ) and (max-width: $screen-lg-max)
		{
             .row-tiles-table .col-xs-12 {
				width: 377px !important;
			 }
		}
}
/* ... */

